<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/opcReiniciarPartida"
        android:title="@string/txtReiniciarPartida"
        android:icon="@drawable/baseline_refresh_24"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/opcGuardarPartida"
        android:title="@string/txtOpcionGuardar"
        android:icon="@drawable/baseline_save_24"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/opcRecuperarPartida"
        android:title="@string/txtOpcionRecuperar"
        android:icon="@drawable/baseline_refresh_24"
        android:orderInCategory="12"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/opcEliminarPartida"
        android:title="@string/txtOpcionEliminar"
        android:icon="@drawable/baseline_refresh_24"
        android:orderInCategory="15"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/opcMejoresResultados"
        android:title="@string/txtOpcionMejoresResultados"
        android:orderInCategory="20"
        />
    <item
        android:id="@+id/opcAjustes"
        android:title="@string/preferencesText"
        android:icon="@drawable/baseline_refresh_24"
        android:orderInCategory="100"
        />
    <item
        android:id="@+id/opcAcercaDe"
        android:title="@string/aboutText"
        android:icon="@drawable/baseline_refresh_24"
        android:orderInCategory="200"
        />

</menu>